--- a/correoEnviado.html
+++ b/correoEnviado.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="mensaje de correo enviado colocado para funcionalidad">
+    <meta name="keyboards" content="mensaje, función, comunicación">
+    <meta name="author" content="Nelson Daniel Romero">
     <title>Cuenta - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
