--- a/fichero020.html
+++ b/fichero020.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="informacion sobre fichero 020">
+    <meta name="keyboards" content="ropa, prenda, tienda, online, argentina, oferta, precio, calidad, accesorios, fichero, cuero, calidad, portabilidad, ficha">
+    <meta name="author" content="Nelson Daniel Romero">
     <title>Fichero 020 - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
@@ -12,7 +15,10 @@
 
     <!--Cabecera-->
     <header class="text-indigo-50 py-4 bg-indigo-600 flex flex-wrap justify-center lg:justify-around lg:flex-nowrap lg:items-center">
-        <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">Crudo<span class="dancing-script-400 text-red-500">StyleClothes</span></a>
+        <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">
+            Crudo
+            <span class="dancing-script-400 text-red-500">StyleClothes</span>
+        </a>
         <nav class="w-full lg:w-2/4 flex justify-evenly font-semibold">
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="index.html">Inicio</a>
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="productos.html">Productos</a>
@@ -22,137 +28,140 @@
         </nav>
     </header>
 
-    <!--Portada-->
-    <div class="w-full h-40 bg-[url(img/informacion-bg-div.webp)] bg-cover bg-center">
-        <div class="size-full  bg-[#00000050] flex justify-center items-center">
-            <h2 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Información del producto</h2>
-        </div>
-    </div>
-
-    <!--Barra de contacto-->
-    <div class="text-indigo-50 py-3 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
-        <p class="text-xl font-semibold text-center lg:text-left">Contáctanos si tienes dudas o consultas</p>
-        <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="contacto.html">Contactar</a>
-    </div>
-    <!--Iconos informativos-->
-    <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
-        <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
-            <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
-            <div class="sm:ml-5">
-                <p class="text-lg font-bold">25% DE DESCUENTO</p>
-                <p>Pagando en efectivo/transferencia</p>
+    <main>
+        <!--Banner-->
+        <div class="w-full h-40 bg-[url(img/informacion-bg-div.webp)] bg-cover bg-center">
+            <div class="size-full  bg-[#00000050] flex justify-center items-center">
+                <h1 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Fichero 020</h1>
             </div>
         </div>
-        <div class="hidden sm:block w-0.5 bg-black"></div>
-        <div class="hidden items-center md:flex">
-            <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
-            <div class="ml-5">
-                <p class="text-lg font-bold">ENVÍOS GRATIS</p>
-                <p>Compras mayores a $100.000</p>
+
+        <!--Barra de contacto-->
+        <div class="text-indigo-50 py-3 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
+            <p class="text-xl font-semibold text-center lg:text-left">Contáctanos si tienes dudas o consultas</p>
+            <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="contacto.html">Contactar</a>
+        </div>
+
+        <!--Iconos informativos-->
+        <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
+            <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
+                <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
+                <div class="sm:ml-5">
+                    <p class="text-lg font-bold">25% DE DESCUENTO</p>
+                    <p>Pagando en efectivo/transferencia</p>
+                </div>
+            </div>
+            <div class="hidden sm:block w-0.5 bg-black"></div>
+            <div class="hidden items-center md:flex">
+                <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">ENVÍOS GRATIS</p>
+                    <p>Compras mayores a $100.000</p>
+                </div>
+            </div>
+            <div class="hidden md:block w-0.5 bg-black"></div>
+            <div class="hidden items-center sm:flex">
+                <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
+                    <p>Con todas las tarjetas</p>
+                </div>
             </div>
         </div>
-        <div class="hidden md:block w-0.5 bg-black"></div>
-        <div class="hidden items-center sm:flex">
-            <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
-            <div class="ml-5">
-                <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
-                <p>Con todas las tarjetas</p>
-            </div>
-        </div>
-    </div>
 
-    <!--Barra lateral e imagen-->
-    <main class="flex flex-nowrap flex-col md:flex-row items-center md:items-stretch w-full md:w-[90%] mx-auto mt-10 gap-5">
+        <!--Barra lateral e imagen-->
+        <div class="flex flex-nowrap flex-col md:flex-row items-center md:items-stretch w-full md:w-[90%] mx-auto mt-10 gap-5">
 
-        <!--Contenedor de imagen-->
-        <section class="w-[90%] md:w-1/2 h-auto h-100 flex flex-wrap gap-4 justify-center md:justify-between bg-indigo-50 shadow-md shadow-gray-400 p-4">
-            <!-- <img class="w-full" src="img/campera1.webp" alt="empleados en área laboral"> -->
-            <div class="w-full">
-                <img class="h-full w-full object-cover object-top" src="img/fichero-020-full.webp" alt="empleados en área laboral">
-            </div>
-        </section>
-
-        <!--Barra lateral-->
-        <aside class="w-[90%] md:w-1/2 md:block h-auto px-4 flex flex-col gap-2 bg-indigo-50 shadow-md shadow-gray-400 py-4">
-
-            <h1 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Fichero 020</h1>
-            <div class="flex flex-wrap justify-between items-baseline mt-4">
-                <p class="text-3xl font-bold">$19.000</p>
-                <p>6 cuotas sin interés de $3.166</p>
+            <!--Contenedor de imagen-->
+            <div class="w-[90%] md:w-1/2 h-auto h-100 flex flex-wrap gap-4 justify-center md:justify-between bg-indigo-50 shadow-md shadow-gray-400 p-4">
+                <img class="h-full w-full object-cover object-top" src="img/fichero-020-full.webp" alt="fichero 020">
             </div>
 
-            <!--Información del producto-->
-            <p class="text-2xl mt-4 font-bold">Descripción</p>
-            <ul class="list-disc list-inside">
-                <li class="text-sm mt-2">Confeccionado en cuero vacuno</li>
-                <li class="text-sm mt-2">Bolsillo con cierre en la tapa trasera</li>
-                <li class="text-sm mt-2">Interior forrado en tela moiré</li>
-                <li class="text-sm mt-2">2 compartimientos para billetes</li>
-                <li class="text-sm mt-2">7 porta tarjetas</li>
-                <li class="text-sm mt-2">Visor cristal</li>
-                <li class="text-sm mt-2">Guantera</li>
-                <li class="text-sm mt-2">Medidas: 18 x 9</li>
-            </ul>
+            <!--Barra lateral-->
+            <aside class="w-[90%] md:w-1/2 md:block h-auto px-4 flex flex-col gap-2 bg-indigo-50 shadow-md shadow-gray-400 py-4">
 
-            <form action="cuenta.html">
-
-                <!--Selector de color-->
+                <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Información del producto</h2>
                 <div class="flex flex-wrap justify-between items-baseline mt-4">
-                    <p class="text-3xl font-semibold">Color</p>
-                    <div class="flex flex-wrap gap-3">
-                        <label for="blanco" class="inline-flex items-center gap-1">
-                            <input class="size-3" type="radio" name="color" id="blanco">
-                            Blanco
-                        </label>
-                        <label for="negro" class="inline-flex items-center gap-1">
-                            <input class="size-3" type="radio" name="color" id="negro">
-                            Negro
-                        </label>
+                    <p class="text-3xl font-bold">$19.000</p>
+                    <p>6 cuotas sin interés de $3.166</p>
+                </div>
+
+                <!--Información del producto-->
+                <h3 class="text-2xl mt-4 font-bold">Descripción</h3>
+                <ul class="list-disc list-inside">
+                    <li class="text-sm mt-2">Confeccionado en cuero vacuno</li>
+                    <li class="text-sm mt-2">Bolsillo con cierre en la tapa trasera</li>
+                    <li class="text-sm mt-2">Interior forrado en tela moiré</li>
+                    <li class="text-sm mt-2">2 compartimientos para billetes</li>
+                    <li class="text-sm mt-2">7 porta tarjetas</li>
+                    <li class="text-sm mt-2">Visor cristal</li>
+                    <li class="text-sm mt-2">Guantera</li>
+                    <li class="text-sm mt-2">Medidas: 18 x 9</li>
+                </ul>
+
+                <form action="cuenta.html" method="get">
+
+                    <!--Selector de color-->
+                    <div class="flex flex-wrap justify-between items-baseline mt-4">
+                        <h3 class="text-3xl font-semibold">Color</h3>
+                        <div class="flex flex-wrap gap-3">
+                            <label for="blanco" class="inline-flex items-center gap-1">
+                                <input class="size-3" type="radio" name="color" id="blanco" value="blanco" required>
+                                Blanco
+                            </label>
+                            <label for="negro" class="inline-flex items-center gap-1">
+                                <input class="size-3" type="radio" name="color" id="negro" value="negro">
+                                Negro
+                            </label>
+                        </div>
                     </div>
-                </div>
-                <!--Selector de cantidad de unidades-->
-                <div class="flex flex-wrap justify-between items-baseline mt-4">
-                    <p class="text-3xl font-semibold">Cantidad</p>
-                    <input class="w-20 h-10 px-2 border-2 border-indigo-400 focus:outline-none focus:border-indigo-700 bg-indigo-100 text-right" type="number" name="cantidad" id="cantidad" placeholder="1">
-                </div>
-                <!--Botón agregar al carrito-->
-                <input class="w-full h-10 mt-6 inline-flex justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Agregar al carrito">
-            </form>
-        </aside>
-    </main>
 
-    <!--Iconos informativos-->
-    <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
-        <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
-            <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
-            <div class="sm:ml-5">
-                <p class="text-lg font-bold">25% DE DESCUENTO</p>
-                <p>Pagando en efectivo/transferencia</p>
+                    <!--Selector de cantidad de unidades-->
+                    <div class="flex flex-wrap justify-between items-baseline mt-4">
+                        <h3 class="text-3xl font-semibold">Cantidad</h3>
+                        <input class="w-20 h-10 px-2 border-2 border-indigo-400 focus:outline-none focus:border-indigo-700 bg-indigo-100 text-right" type="number" name="cantidad" id="cantidad" min="1" value="1" required>
+                    </div>
+                    
+                    <!--Botón agregar al carrito-->
+                    <input class="w-full h-10 mt-6 inline-flex justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Agregar al carrito">
+                    <p class="text-sm text-center mt-2">*Cuenta necesaria para relizar la compra</p>
+                </form>
+            </aside>
+        </div>
+
+        <!--Iconos informativos-->
+        <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
+            <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
+                <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
+                <div class="sm:ml-5">
+                    <p class="text-lg font-bold">25% DE DESCUENTO</p>
+                    <p>Pagando en efectivo/transferencia</p>
+                </div>
+            </div>
+            <div class="hidden sm:block w-0.5 bg-black"></div>
+            <div class="hidden items-center md:flex">
+                <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">ENVÍOS GRATIS</p>
+                    <p>Compras mayores a $100.000</p>
+                </div>
+            </div>
+            <div class="hidden md:block w-0.5 bg-black"></div>
+            <div class="hidden items-center sm:flex">
+                <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
+                    <p>Con todas las tarjetas</p>
+                </div>
             </div>
         </div>
-        <div class="hidden sm:block w-0.5 bg-black"></div>
-        <div class="hidden items-center md:flex">
-            <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
-            <div class="ml-5">
-                <p class="text-lg font-bold">ENVÍOS GRATIS</p>
-                <p>Compras mayores a $100.000</p>
-            </div>
-        </div>
-        <div class="hidden md:block w-0.5 bg-black"></div>
-        <div class="hidden items-center sm:flex">
-            <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
-            <div class="ml-5">
-                <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
-                <p>Con todas las tarjetas</p>
-            </div>
-        </div>
-    </div>
+    </main>
 
     <!--Pie de página-->
     <footer class="h-195 sm:h-90 md:h-60 mt-10 bg-indigo-700 text-indigo-50">
         <div class="md:hidden pt-10 text-left sm:text-center ml-10 sm:ml-0 mr-10 sm:mr-0">
             <h3 class="font-bold text-2xl">Recibí promos exclusivas dejándonos tu email</h3>
-            <form class="mt-2" action="suscripcionExtitosa.html">
+            <form class="mt-2" action="suscripcionExitosa.html" method="get">
                 <input class="border-2 p-1 border-indigo-500 bg-indigo-800 focus:bg-indigo-900 focus:border-indigo-400 focus:outline-none text-indigo-50" type="email" name="email" placeholder="direccion@ejemplo.com">
                 <input class="border-2 p-1 border-indigo-500 bg-indigo-800 hover:bg-indigo-900 hover:border-indigo-400 cursor-pointer" type="submit" value="Suscribirme">
             </form>
@@ -170,29 +179,29 @@
             <div class="ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Legales</h3>
                 <ul class="mt-4">
-                    <li class="mt-2"><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li class="mt-2"><a href="devoluciones.html">Envíos y devoluciones</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html">Preguntas frecuentes</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html#enviosDevoluciones">Envíos y devoluciones</a></li>
                     <li class="mt-2"><a href="politica.html">Políticas de la tienda</a></li>
-                    <li class="mt-2"><a href="politica.html#metodospago">Métodos de pago</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html#metodosDePago">Métodos de pago</a></li>
                 </ul>
             </div>
             <div class="ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Nuestras redes</h3>
                 <ul class="mt-4">
                         <li class="mt-2">
-                            <a href="https://www.facebook.com">
+                            <a href="https://www.facebook.com" target="_blank">
                                 <img class="w-5 inline-block" src="img/icons/icon-facebook.png" alt="ícono facebook">
                                 <span class="ml-2">Facebook</span>
                             </a>
                         </li>
                         <li class="mt-2">
-                            <a href="https://www.x.com">
+                            <a href="https://www.x.com" target="_blank">
                                 <img class="w-5 inline-block" src="img/icons/icon-x.png" alt="ícono x">
                                 <span class="ml-2">X</span>
                             </a>
                         </li>
                         <li class="mt-2">
-                            <a href="https://www.instagram.com">
+                            <a href="https://www.instagram.com" target="_blank">
                                 <img class="w-5 inline-block" src="img/icons/icon-instagram.png" alt="ícono instagram">
                                 <span class="ml-2">Instagram</span>
                             </a>
@@ -201,7 +210,7 @@
             </div>
             <div class="hidden md:block ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Recibí promos exclusivas<br>dejándonos tu email</h3>
-                <form class="mt-2" action="suscripcionExtitosa.html">
+                <form class="mt-2" action="suscripcionExitosa.html" method="get">
                     <input class="border-2 p-1 border-indigo-500 bg-indigo-800 focus:bg-indigo-900 focus:border-indigo-400 focus:outline-none text-indigo-50" type="email" name="email" id="email" placeholder="direccion@ejemplo.com">
                     <input class="border-2 p-1 border-indigo-500 bg-indigo-800 hover:bg-indigo-900 hover:border-indigo-400 cursor-pointer" type="submit" value="Suscribirme">
                 </form>
