--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="información sobre los medios de contacto">
+    <meta name="keyboards" content="ropa, prenda, tienda, online, argentina, oferta, precio, calidad, ubicación, localidad, dirección, comunicación, charla, conversación, dirección, local, comunicar">
+    <meta name="author" content="Nelson Daniel Romero">
     <title>Contacto - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
@@ -12,7 +15,10 @@
 
     <!--Cabecera-->
     <header class="text-indigo-50 py-4 bg-indigo-600 flex flex-wrap justify-center lg:justify-around lg:flex-nowrap lg:items-center">
-        <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">Crudo<span class="dancing-script-400 text-red-500">StyleClothes</span></a>
+        <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">
+            Crudo
+            <span class="dancing-script-400 text-red-500">StyleClothes</span>
+        </a>
         <nav class="w-full lg:w-2/4 flex justify-evenly font-semibold">
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="index.html">Inicio</a>
             <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="productos.html">Productos</a>
@@ -22,103 +28,105 @@
         </nav>
     </header>
 
-    <!--Portada-->
-    <div class="w-full h-40 bg-[url(img/contacto-bg-div.webp)] bg-cover bg-center">
-        <div class="size-full  bg-[#00000050] flex justify-center items-center">
-            <h1 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Contacto</h1>
+    <main>
+        <!--Banner-->
+        <div class="w-full h-40 bg-[url(img/contacto-bg-div.webp)] bg-cover bg-center">
+            <div class="size-full  bg-[#00000050] flex justify-center items-center">
+                <h1 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Contacto</h1>
+            </div>
         </div>
-    </div>
 
-    <!--Barra de preguntas frecuentes-->
-    <div class="text-indigo-50 py-3 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
-        <p class="text-xl font-semibold text-center lg:text-left">Revisa nuestra sección de preguntas frecuentes</p>
-        <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="faq.html">Ver sección</a>
-    </div>
+        <!--Barra de preguntas frecuentes-->
+        <div class="text-indigo-50 py-3 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
+            <p class="text-xl font-semibold text-center lg:text-left">Revisa nuestra sección de preguntas frecuentes</p>
+            <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="preguntasFrecuentes.html">Ver sección</a>
+        </div>
 
-    <!--Sección de medios de contacto-->
-    <section class="flex flex-wrap mt-10 w-[90%] justify-center gap-5 mx-auto">
-        <div class="w-full lg:w-[48%] flex flex-wrap gap-5">
+        <!--Contenedor de tarjetas-->
+        <div class="flex flex-wrap mt-10 w-[90%] justify-center gap-5 mx-auto">
 
-            <!--Tarjeta servicio al cliente-->
-            <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4">
-                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Servicio al cliente</h2>
-                    <p class="mt-4 text-center"><strong>Teléfono:</strong> <a href="tel:+54-383-4977878">+54-383-4977878</a></p>
-                    <p class="mt-2 text-center"><strong>Email: </strong><a href="http://contacto@crudo.com">contacto@crudo.com</a></p>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.facebook.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-facebook-dark.png" alt="ícono facebook">
-                        <span class="ml-2">Síguenos en Facebook</span>
-                    </a>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.instagram.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-instagram-dark.png" alt="ícono instagram">
-                        <span class="ml-2">Síguenos en Instagram</span>
-                    </a>
-                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.x.com">
-                        <img class="size-5 inline-block" src="img/icons/icon-x-dark.png" alt="ícono x">
-                        <span class="ml-2">Síguenos en X</span>
-                    </a>
+            <!--Contenedor de tarjetas izquierda-->
+            <div class="w-full lg:w-[48%] flex flex-wrap gap-5">
+
+                <!--Artículo de servicio al cliente-->
+                <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4">
+                        <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Servicio al cliente</h2>
+                        <p class="mt-4 text-center"><strong>Teléfono:</strong> <a href="tel:+54-383-4977878">+54-383-4977878</a></p>
+                        <p class="mt-2 text-center"><strong>Email: </strong><a href="mailto:contacto@crudo.com">contacto@crudo.com</a></p>
+                        <a class="mt-2 w-full inline-flex justify-center items-center gap-1" href="https://www.facebook.com" target="_blank">
+                            <img class="size-5 inline-block" src="img/icons/icon-facebook-dark.png" alt="ícono facebook">
+                            Síguenos en Facebook
+                        </a>
+                        <a class="mt-2 w-full inline-flex justify-center items-center gap-1" href="https://www.instagram.com" target="_blank">
+                            <img class="size-5 inline-block" src="img/icons/icon-instagram-dark.png" alt="ícono instagram">
+                            Síguenos en Instagram
+                        </a>
+                        <a class="mt-2 w-full inline-flex justify-center items-center gap-1" href="https://www.x.com" target="_blank">
+                            <img class="size-5 inline-block" src="img/icons/icon-x-dark.png" alt="ícono x">
+                            Síguenos en X
+                        </a>
+                </article>
+
+                <!--Artículo de distribuidores-->
+                <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4" id="distribuidores">
+                        <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Distribuidores</h2>
+                        <p class="mt-2 text-center"><strong>Catamarca:</strong> Presidente castillo 1755</p>
+                        <p class="mt-2 text-center"><strong>Córdoba:</strong> Miguel Calixto del Corro 1057</p>
+                        <p class="mt-2 text-center"><strong>La Rioja:</strong> Av. Monseñor e. Angelelli 980</p>
+                        <p class="mt-2 text-center"><strong>Buenos Aires:</strong> Av. Tte. Gral. Donato Álvarez 407</p>
+                </article>
+            </div>
+
+            <!--Artículo de formulario-->
+            <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
+                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Contáctanos</h2>
+                    <form action="formularioEnviado.html">
+                        <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
+                        <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
+                        <label class="block w-full mt-4 font-semibold" for="email">Email</label>
+                        <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
+                        <label class="block w-full mt-4 font-semibold" for="telefono">Telefono <small>(opcional)</small></label>
+                        <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="tel" name="telefono" id="telefono" placeholder="+54-123-4567890">
+                        <label class="block w-full mt-4 font-semibold" for="mensaje">Mensaje <small>(opcional)</small></label>
+                        <textarea class="block w-full h-20 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" name="mensaje" id="mensaje" placeholder="Mensaje..."></textarea>
+                        <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Enviar">
+                    </form>
             </article>
-
-            <!--Tarjeta distribuidores-->
-            <article class="bg-indigo-50 w-full md:w-[48%] lg:w-full shadow-md shadow-gray-400 p-4" id="distribuidores">
-                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Distribuidores</h2>
-                    <p class="mt-2 text-center"><strong>Catamarca:</strong> Presidente castillo 1755</p>
-                    <p class="mt-2 text-center"><strong>Córdoba:</strong> Miguel Calixto del Corro 1057</p>
-                    <p class="mt-2 text-center"><strong>La Rioja:</strong> Av. Monseñor e. Angelelli 980</p>
-                    <p class="mt-2 text-center"><strong>Buenos Aires:</strong> Av. Tte. Gral. Donato Álvarez 407</p>
-            </article>
         </div>
 
-        <!--Artículo de formulario-->
-        <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
-                <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Contáctanos</h2>
-                <form action="formularioEnviado.html">
-                    <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
-                    <label class="block w-full mt-4 font-semibold" for="email">Email</label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
-                    <label class="block w-full mt-4 font-semibold" for="telefono">Telefono <small>(opcional)</small></label>
-                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="tel" name="telefono" id="telefono" placeholder="+54-123-4567890">
-                    <label class="block w-full mt-4 font-semibold" for="mensaje">Mensaje <small>(opcional)</small></label>
-                    <textarea class="block w-full h-20 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" name="mensaje" id="mensaje" placeholder="Mensaje..."></textarea>
-                    <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Enviar">
-                </form>
-        </article>
-    </section>
-
-    <!--Iconos informativos-->
-    <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
-        <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
-            <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
-            <div class="sm:ml-5">
-                <p class="text-lg font-bold">25% DE DESCUENTO</p>
-                <p>Pagando en efectivo/transferencia</p>
+        <!--Iconos informativos-->
+        <div class="flex flex-nowrap justify-around mt-15 max-w-[90%] mx-auto gap-4">
+            <div class="flex flex-col sm:flex-row items-center text-center sm:text-left">
+                <img class="w-10 h-10" src="img/icons/dolares.png" alt="ícono dólares">
+                <div class="sm:ml-5">
+                    <p class="text-lg font-bold">25% DE DESCUENTO</p>
+                    <p>Pagando en efectivo/transferencia</p>
+                </div>
+            </div>
+            <div class="hidden sm:block w-0.5 bg-black"></div>
+            <div class="hidden items-center md:flex">
+                <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">ENVÍOS GRATIS</p>
+                    <p>Compras mayores a $100.000</p>
+                </div>
+            </div>
+            <div class="hidden md:block w-0.5 bg-black"></div>
+            <div class="hidden items-center sm:flex">
+                <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
+                <div class="ml-5">
+                    <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
+                    <p>Con todas las tarjetas</p>
+                </div>
             </div>
         </div>
-        <div class="hidden sm:block w-0.5 bg-black"></div>
-        <div class="hidden items-center md:flex">
-            <img class="w-10 h-10" src="img/icons/enviado.png" alt="ícono envíos">
-            <div class="ml-5">
-                <p class="text-lg font-bold">ENVÍOS GRATIS</p>
-                <p>Compras mayores a $100.000</p>
-            </div>
-        </div>
-        <div class="hidden md:block w-0.5 bg-black"></div>
-        <div class="hidden items-center sm:flex">
-            <img class="w-10 h-10" src="img/icons/tarjetas-de-credito.png" alt="ícono tarjeta de crédito">
-            <div class="ml-5">
-                <p class="text-lg font-bold">3 CUOTAS SIN INTERÉS</p>
-                <p>Con todas las tarjetas</p>
-            </div>
-        </div>
-    </div>
-
-    
+    </main>
 
     <!--Pie de página-->
     <footer class="h-195 sm:h-90 md:h-60 bg-indigo-700 text-indigo-50 mt-10">
         <div class="md:hidden pt-10 text-left sm:text-center ml-10 sm:ml-0 mr-10 sm:mr-0">
             <h3 class="font-bold text-2xl">Recibí promos exclusivas dejándonos tu email</h3>
-            <form class="mt-2" action="suscripcionExtitosa.html">
+            <form class="mt-2" action="suscripcionExitosa.html" method="get">
                 <input class="border-2 p-1 border-indigo-500 bg-indigo-800 focus:bg-indigo-900 focus:border-indigo-400 focus:outline-none text-indigo-50" type="email" name="email" placeholder="direccion@ejemplo.com">
                 <input class="border-2 p-1 border-indigo-500 bg-indigo-800 hover:bg-indigo-900 hover:border-indigo-400 cursor-pointer" type="submit" value="Suscribirme">
             </form>
@@ -136,38 +144,38 @@
             <div class="ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Legales</h3>
                 <ul class="mt-4">
-                    <li class="mt-2"><a href="faq.html">Preguntas frecuentes</a></li>
-                    <li class="mt-2"><a href="devoluciones.html">Envíos y devoluciones</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html">Preguntas frecuentes</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html#enviosDevoluciones">Envíos y devoluciones</a></li>
                     <li class="mt-2"><a href="politica.html">Políticas de la tienda</a></li>
-                    <li class="mt-2"><a href="politica.html#metodospago">Métodos de pago</a></li>
+                    <li class="mt-2"><a href="preguntasFrecuentes.html#metodosDePago">Métodos de pago</a></li>
                 </ul>
             </div>
             <div class="ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Nuestras redes</h3>
                 <ul class="mt-4">
-                        <li class="mt-2">
-                            <a href="https://www.facebook.com">
-                                <img class="w-5 inline-block" src="img/icons/icon-facebook.png" alt="ícono facebook">
-                                <span class="ml-2">Facebook</span>
-                            </a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="https://www.x.com">
-                                <img class="w-5 inline-block" src="img/icons/icon-x.png" alt="ícono x">
-                                <span class="ml-2">X</span>
-                            </a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="https://www.instagram.com">
-                                <img class="w-5 inline-block" src="img/icons/icon-instagram.png" alt="ícono instagram">
-                                <span class="ml-2">Instagram</span>
-                            </a>
-                        </li>
+                    <li class="mt-2">
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img class="w-5 inline-block" src="img/icons/icon-facebook.png" alt="ícono facebook">
+                            <span class="ml-2">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="mt-2">
+                        <a href="https://www.x.com" target="_blank">
+                            <img class="w-5 inline-block" src="img/icons/icon-x.png" alt="ícono x">
+                            <span class="ml-2">X</span>
+                        </a>
+                    </li>
+                    <li class="mt-2">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img class="w-5 inline-block" src="img/icons/icon-instagram.png" alt="ícono instagram">
+                            <span class="ml-2">Instagram</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="hidden md:block ml-10 sm:ml-0 mt-10">
                 <h3 class="font-bold text-2xl">Recibí promos exclusivas<br>dejándonos tu email</h3>
-                <form class="mt-2" action="suscripcionExtitosa.html">
+                <form class="mt-2" action="suscripcionExitosa.html" method="get">
                     <input class="border-2 p-1 border-indigo-500 bg-indigo-800 focus:bg-indigo-900 focus:border-indigo-400 focus:outline-none text-indigo-50" type="email" name="email" id="email" placeholder="direccion@ejemplo.com">
                     <input class="border-2 p-1 border-indigo-500 bg-indigo-800 hover:bg-indigo-900 hover:border-indigo-400 cursor-pointer" type="submit" value="Suscribirme">
                 </form>
