--- a/suscripcionExitosa.html
+++ b/suscripcionExitosa.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="mensaje de error colocado por funcionalidad">
-    <meta name="keyboards" content="error, comunicación, funcionalidad">
+    <meta name="description" content="mensaje de suscripción exitosa colocado por funcionalidad">
+    <meta name="keyboards" content="funcionalidad, mensaje, comunicar">
     <meta name="author" content="Nelson Daniel Romero">
-    <title>Error - Crudo Style Clothes</title>
+    <title>Suscripción Exitosa - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <meta http-equiv="refresh" content="5; url=cuenta.html"/>
+    <meta http-equiv="refresh" content="5; url=index.html"/>
 </head>
 <body class="bg-indigo-100">
 
     <!--Mensaje-->
     <div class="w-full h-screen flex flex-col justify-center items-center gap-6">
-        <h1 class="text-7xl text-center">¡Error!</h1>
-        <p class="text-2xl text-center">Escribiste mal tu usuario o contraseña</p>
-        <p class="text-2xl text-center">Vuelve a intentarlo</p>
+        <h1 class="text-7xl text-center">¡Suscripción exitosa!</h1>
+        <p class="text-2xl text-center">Desde ahora recibirás en tu correo nuestras promociones y novedades</p>
     </div>
 
 </body>
