--- a/cuenta.html
+++ b/cuenta.html
@@ -44,7 +44,7 @@
         <!--Artículo crear cuenta-->
         <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
             <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Crear cuenta</h2>
-            <form action="correoEnviado.html" method="post">
+            <form action="correoEnviado.html">
                 <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
                 <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
                 <label class="block w-full mt-4 font-semibold" for="email">Email</label>
@@ -60,7 +60,7 @@
         <!--Artículo de ingreso-->
         <article class="bg-indigo-50 w-full lg:w-[48%] shadow-md shadow-gray-400 p-4">
             <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Ingresar</h2>
-            <form action="error.html" method="post">
+            <form action="error.html">
                 <label class="block w-full mt-4 font-semibold" for="email">Email</label>
                 <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
                 <label class="block w-full mt-4 font-semibold" for="telefono">Contraseña</label>
