--- a/formularioEnviado.html
+++ b/formularioEnviado.html
@@ -6,7 +6,7 @@
     <meta name="description" content="mensaje de correo enviado colocado para funcionalidad">
     <meta name="keyboards" content="mensaje, función, comunicación">
     <meta name="author" content="Nelson Daniel Romero">
-    <title>Registro exitoso - Crudo Style Clothes</title>
+    <title>Correo enviado - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -17,7 +17,7 @@
     <!--Mensaje-->
     <div class="w-full h-screen flex flex-col justify-center items-center gap-6">
         <h1 class="text-7xl text-center">¡Correo enviado!</h1>
-        <p class="text-2xl text-center">Revisa tu casilla de correo para confirmar tu correo</p>
+        <p class="text-2xl text-center">En breve nos comunicaremos contigo</p>
     </div>
 
 </body>
